5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1671_1101.log
== TEST (2019-04-24 14:42:41) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=

-- ERROR:
File "XXXX", line 5
    msg=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:51:10) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
elif(b=="R")and(a>500):
	msg=(a*0.65)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
print("Valor total: R$",msg)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.129305
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 17
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:51:11) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
elif(b=="R")and(a>500):
	msg=(a*0.65)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
print("Valor total: R$",msg)
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 17
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:41) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
elif(b=="R")and(a>500):
	msg=(a*0.65)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$", msg)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:54:37) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$", msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$", msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:54:49) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$", msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$", msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.191782
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:55:27) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$", msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$", msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:55:38) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a, "kWh", "e", "tipo", b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$", msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$", msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.147364
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:56:07) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$", msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$", msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$", msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.18557
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:56:27) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.16802
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:28) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:35) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:44) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:57:54) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.212799
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:00:46) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.161152
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:00:46) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:00:59) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:01:10) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:01:28) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh", "e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.199538
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:47) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.154085
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:49) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.205772
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:50) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.223336
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:50) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.500364
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:50) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.656034
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:50) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.641124
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:50) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.644622
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:50) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.704785
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:51) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.308246
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:02:51) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.164454
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1671/1101/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:03:27) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:04:25) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a<0):
	print("Dados invalidos")
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.155207
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:07:44) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a>0and(b=="R" or b=="I" or b=="C")):
elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 5
    elif(b=="R")and(a<=500):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:09:39) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a>0and(b=="R" or b=="I" or b=="C")):
	elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
	elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.146763
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 5
    elif(b=="R")and(a<=500):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:09:40) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a>0and(b=="R" or b=="I" or b=="C")):
	elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
	elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 5
    elif(b=="R")and(a<=500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:01:14) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e", "tipo",b)
if(a>0and(b=="R" or b=="I" or b=="C")):
	
	elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
	elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.113686
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 6
    elif(b=="R")and(a<=500):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:03:44) 
-- CODE:
a=float(input("consumo de energia(em kWh): "))
b=input("tipos de instalacao: ")
print("Entradas:", a,"kWh","e tipo",b)
if(a>0and(b=="R" or b=="I" or b=="C")):
	
	elif(b=="R")and(a<=500):
	msg=(a*0.44)
	print("Valor total:", "R$",msg)
	elif(b=="R")and(a>500):
	msg=(a*0.65)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a<=1000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="C")and(a>1000):
	msg=(a*0.60)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a<=5000):
	msg=(a*0.55)
	print("Valor total:", "R$",msg)
	elif(b=="I")and(a>5000):
	msg=(a*0,60)
	print("Valor total:", "R$",msg)
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.152345
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 6
    elif(b=="R")and(a<=500):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
